# takeovflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.es.md  README.md  REAME.md  go.mod  install.sh  main.go  pyproject.toml  requirements.txt  takeovflow.py  takeovflow.sh
.github/workflows/: ci.yml
go/: README.md  go.mod  main.go
go/cmd/: main.go
go/internal/scanner/: takeover.go
go/internal/utils/: helpers.go
tests/: test_takeovflow.py
